--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="heart"></div>
             <div class="text">
             <h2>Hey!I have something to tell you</h2>
-        <p>bla bla bla <br><br>
+        <p>muri khaa <br><br>
         </p>
                     </div>
                 </div>
