--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
         <div class="letter">
             <div class="heart"></div>
             <div class="text">
-            <h2>Hey!I have something to tell you</h2>
-        <p>kind & sabit are best friend
+            <h3>Hey!I have something to tell you</h3>
+        <p>i just wanted to say<br>
+            sorry.<br>
+            You are the most cutest <br>
+            and amazing person,<br>
+            i have ever met.
         </p>
                     </div>
                 </div>
