--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
             <div class="heart"></div>
             <div class="text">
             <h3>Hey!I have something to tell you</h3>
-        <p>i just wanted to say<br>
-            sorry.<br>
-            You are the most cutest <br>
-            and amazing person,<br>
-            i have ever met.
+        <p>i just wanted to say sorry.<br>
+            You are the cutest<br>
+             person, I <br>
+             ever Met.
         </p>
                     </div>
                 </div>
